# cg-mwesplit

./: .gitignore  .travis.yml  Makefile.am  README.org  configure.ac
src/: Makefile.am  main.cpp  mwesplit.cpp  mwesplit.hpp
test/: err_expected.inconsistent_dalle_go.cg  expected.comment.cg  expected.dalle_go.cg  expected.dupe.cg  expected.inconsistent_dalle_go.cg  expected.simple.cg  input.comment.cg  input.dalle_go.cg  input.dupe.cg  input.inconsistent_dalle_go.cg  input.simple.cg  run
